--- a/css/test.css
+++ b/css/test.css
@@ -1,9 +1,46 @@
 h1 {
-    color: #68B4FF;
+    color: #3d76af;
     font-family: monospace;
 }
 
 body {
-    color: black;
+    color: white;
     font-family: monospace;
+    background-color: #80adbf;
+}
+
+a {
+    font-size: 20px;
+    color: white;
+    font-family: fantasy;
+}
+
+#championsBorder {
+    background-color: #3d4a4f;
+    width: 100%;
+}
+
+.responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+}
+
+div.gallery:hover {
+    transform: scale(0.9,0.9);
+}
+  
+div.gallery img {
+    width: 100%;
+    height: 100%;
+}
+
+.desc {
+    text-align: center;
+    font-family: fantasy;
+    font-size: 50px;
+}
+
+img {
+    border-radius: 65px;
 }
