with a changes in the text image of the champions

--- a/css/test.css
+++ b/css/test.css
@@ -38,7 +38,7 @@ div.gallery img {
 .desc {
     text-align: center;
     font-family: fantasy;
-    font-size: 50px;
+    font-size: 100%;
 }
 
 img {
