--- a/css/test.css
+++ b/css/test.css
@@ -1,46 +1,63 @@
-h1 {
-    color: #3d76af;
+.tittleWebPage {
     font-family: monospace;
+    font-weight: bold;
+    text-align: center;
+    font-size: 20px;
+}
+
+.gallery {
+    width: 300px;
+    height: 300px;
+    margin: 10px;
+    float: left;
+    /*display: inline-block;*/
+    /*border: 10px solid gray;*/
+}
+
+.galleryDesc {
+    text-align: center;
+    font-family: monospace;
+    font-size: 20px;
+}
+
+.champIcon img {
+    border-radius: 38%;
+    width: 280px;
+    height: 280px;
+}
+
+.champIcon p {
+    text-align: center;
+    background-color: #b1b3ab;
+    border-radius: 100%;
+    width: 275px;
+    font-family: monospace;
+    font-size: 2vw;
+    font-size: 2vh;
+}
+
+.gameDesc {
+    font-size: 20px;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.custom-navbar {
+    background-color: black; 
+}
+
+.customButton {
+    color: white;
 }
 
 body {
-    color: white;
-    font-family: monospace;
-    background-color: #80adbf;
-}
-
-a {
-    font-size: 20px;
-    color: white;
-    font-family: fantasy;
-}
-
-#championsBorder {
-    background-color: #3d4a4f;
-    width: 100%;
-}
-
-.responsive {
-    padding: 0 6px;
-    float: left;
-    width: 24.99999%;
-}
-
-div.gallery:hover {
-    transform: scale(0.9,0.9);
-}
-  
-div.gallery img {
-    width: 100%;
-    height: 100%;
-}
-
-.desc {
-    text-align: center;
-    font-family: fantasy;
-    font-size: 100%;
+    background-color: #e6e9ed;
 }
 
 img {
-    border-radius: 65px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
